2006-10-11  David Hansen  <david.hansen@physik.fu-berlin.de>

	* w3m.el (w3m-relationship-estimate-rules): Support for google code
	search added.

2006-10-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Remove
	sitesearch area.

2006-10-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el, w3m-bookmarks.el, w3m-search.el: Remove misadded Luca
	Capello from the Authors field.

2006-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-compatible-encoding-alist): Add
	iso-8859-8/windows-1255 and iso-8859-9/windows-1254.

	* shimbun/sb-rss.el (shimbun-rss-compatible-encoding-alist): Ditto.

2006-10-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-cnet-jp.el (shimbun-clear-contents): Remove anchors
	to print pages.

	* shimbun/sb-opentechpress-jp.el
	(shimbun-opentechpress-jp-content-end): Now covers widen area.

2006-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-mail.el (w3m-mail-compose-with-vm): Treat source as binary
	data for images; encode source according to charset; use
	mail-send-actions to kill source buffer.
	(w3m-mail): Examine charset when the page is displayed normally.

	* w3m-util.el (w3m-coding-system-to-mime-charset): Rename to
	w3m-coding-system-to-charset and move to w3m.el

	* w3m.el (w3m-coding-system-to-charset): Move from w3m-util.el.
	(w3m-buffer): New function.

2006-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-mail-user-agents): Add vm-user-agent.

	* w3m-mail.el (w3m-mail-user-agent-compose-function-alist): Add
	vm-user-agent.
	(w3m-mail-compose-with-vm): New function.
	(w3m-mail-goto-body-and-clear-body): New function.
	(w3m-mail-position-point): New function.
	(w3m-mail-compose-with-mml, w3m-mail-compose-with-semi): Use them.

2006-09-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* mew-w3m.el (w3m-mail-compose-with-mew): Handle coding-system and
	charset accurately. When call with `current-prefix-arg', try to
	use existing draft buffer.
